--- a/view/user/failedOrder.ejs
+++ b/view/user/failedOrder.ejs
@@ -164,10 +164,17 @@
    </div>
    <div class="col-md-10 p-4" style="margin-top:80px">
       <div class="page-header">
-         <h2 class="text-center mb-0">Your Order History</h2>
+         <h2 class="text-center mb-0">Your Failed Order History</h2>
          <p class="text-center mb-0 mt-2 text-white-50">Track and manage your orders</p>
       </div>
 
+      <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+         <ol class="breadcrumb">
+           <li class="breadcrumb-item"><a href="/user/dashboard">Dashboard</a></li>
+           <li class="breadcrumb-item"><a href="/user/order">Order</a></li>
+           <li class="breadcrumb-item active" aria-current="page">OrderDetails</li>
+         </ol>
+       </nav>
       <div class="orders-container">
          <% orders.forEach(element => { %>
          <div class="order-card">
