--- a/view/user/partials/profileside.ejs
+++ b/view/user/partials/profileside.ejs
@@ -50,11 +50,6 @@
       padding-left: 25px;
   }
 
-  .nav-links a.active {
-      background: #34495e;
-      border-left: 3px solid #3498db;
-  }
-
   .nav-links i {
       margin-right: 10px;
       width: 20px;
@@ -120,12 +115,6 @@
             </a>
         </li>
         <li>
-            <a href="#" class="review">
-                <i class="fas fa-star"></i>
-                <span>My Reviews</span>
-            </a>
-        </li>
-        <li>
             <a href="/user/address" class="address">
                 <i class="fas fa-map-marker-alt"></i>
                 <span>My Address</span>
@@ -182,6 +171,9 @@
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Logout</span>
             </a>
+        </li>
+        <li class="empty-btn" style="height:256px">
+            
         </li>
     </ul>
 </div>
