--- a/view/user/partials/userfooter.ejs
+++ b/view/user/partials/userfooter.ejs
@@ -4,7 +4,7 @@
          background: var(--dark);
          color: white;
          padding: 4rem 0 2rem;
-         margin-top: 4rem;
+         margin-top: -16px;
       }
 
       .footer-title {
