--- a/view/user/partials/userheader.ejs
+++ b/view/user/partials/userheader.ejs
@@ -7,7 +7,8 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-  <title>Document</title>
+  <title>Taste Trial-Delicious Food
+    Delivered To You</title>
 
   <head>
     <style>
