--- a/view/user/wishlist.ejs
+++ b/view/user/wishlist.ejs
@@ -72,6 +72,10 @@
   .object-fit-cover {
     object-fit: cover;
   }
+  .nav-links a.wishlist {
+      background: #34495e;
+      border-left: 3px solid #3498db;
+  }
 </style>
 
 <%- include('partials/userheader') %>
