--- a/view/admin/partials/admin.ejs
+++ b/view/admin/partials/admin.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Taste Trial-Admin</title>
   <link rel="stylesheet" href="/adminpartial.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -31,7 +31,7 @@
 
     .sidebar {
    
-      width:100%;
+      width:20%;
       background: white;
       color: #1e293b;
       padding-top: 1rem;
