--- a/view/user/load.ejs
+++ b/view/user/load.ejs
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>FoodieHub - Order Your Favorite Food</title>
+   <title>Tate Trial - Delicious Food Delivered To You</title>
    <link rel="stylesheet" href="/login.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -394,8 +394,8 @@
       <div class="container">
          <h2>Search Your Favorite Food</h2>
          <div class="search-box">
-            <input type="text" placeholder="Search for food or restaurants...">
-            <button>Search</button>
+            <input type="text" id="searchforFood" placeholder="Search for food ...">
+            <button id="search">Search</button>
          </div>
       </div>
    </section>
@@ -845,6 +845,12 @@
             return;
          }
       });
+
+    document.getElementById('search').addEventListener('click',async function(){
+      const searchforFood=document.getElementById('searchforFood').value
+      window.location.href=`/user/load?search=${searchforFood}`
+    })
+    
 
 
 
